--- a/main_path/templates/main_path/projects.html
+++ b/main_path/templates/main_path/projects.html
@@ -32,8 +32,8 @@
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
         <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>-->
+<!--        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>-->
         <![endif]-->
     </head>
     <body>
@@ -69,31 +69,20 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                             </button>
-                            <a class="navbar-brand" href="#"><img src="{% static 'img/logo-TehStroy.png'%}" alt=""></a>
+                            <a class="navbar-brand" href="#"><img src="{% static 'img/logo-TehStroy (3).png'%}" alt=""></a>
                         </div>
 
                         <!-- Collect the nav links, forms, and other content for toggling -->
-                        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                             <ul class="nav navbar-nav navbar-right">
-                                <li class="dropdown submenu">
-                                    <a href="{% url 'index'%}" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Главная</a>
-<!--                                    <ul class="dropdown-menu">-->
-<!--                                        <li><a href="index.html">Home 01</a></li>-->
-<!--                                        <li><a href="index-2.html">Home 02</a></li>-->
-<!--                                    </ul>-->
-                                </li>
                                 <li class="dropdown submenu active">
-                                    <a href="{% url 'projects'%}" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Проекты</a>
-<!--                                    <ul class="dropdown-menu">-->
-<!--                                        <li><a href="project-full-width.html">Project Full Width</a></li>-->
-<!--                                        <li><a href="project-grid-three-column.html">Project Grid 01</a></li>-->
-<!--                                        <li><a href="project-grid-two-column.html">Project Grid 02</a></li>-->
-<!--                                        <li><a href="project-three-column.html">Project Grid 03</a></li>-->
-<!--                                        <li><a href="project-single.html">Single Project</a></li>-->
-<!--                                    </ul>-->
+                                    <a href="{% url 'index'%}">Главная</a>
+                                </li>
+                                <li >
+                                    <a href="{% url 'projects'%}">Проекты</a>
                                 </li>
                                 <li><a href="{% url 'services'%}">Услуги</a></li>
-                                <li><a href="#">О нас</a></li>
+                                <li><a href="">О нас</a></li>
 <!--                                <li><a href="blog-details.html">blog</a></li>-->
                                 <li><a href="#">Контакты</a></li>
 <!--                                <li class="icon_search"><a href="#"><i class="mdi mdi-cart"></i></a></li>-->
@@ -108,13 +97,13 @@
         <!--================Banner Area =================-->
         <section class="banner_area">
             <div class="container">
-                <div class="banner_inner_text">
-                    <h4>Project full width</h4>
-                    <ul>
-                        <li><a href="#">Home</a></li>
-                        <li class="active"><a href="#">Project full width 2 colum</a></li>
-                    </ul>
-                </div>
+<!--                <div class="banner_inner_text">-->
+<!--&lt;!&ndash;                    <h4>Project full width</h4>&ndash;&gt;-->
+<!--&lt;!&ndash;                    <ul>&ndash;&gt;-->
+<!--&lt;!&ndash;                        <li><a href="#">Home</a></li>&ndash;&gt;-->
+<!--&lt;!&ndash;                        <li class="active"><a href="#">Project full width 2 colum</a></li>&ndash;&gt;-->
+<!--&lt;!&ndash;                    </ul>&ndash;&gt;-->
+<!--                </div>-->
             </div>
         </section>
         <!--================End Banner Area =================-->
@@ -122,22 +111,22 @@
         <!--================Our Project2 Area =================-->
         <section class="our_project2_area our_project_two_column">
             <div class="main_c_b_title">
-                <h2>Our<br class="title_br">Projects</h2>
-                <h6>Great & Awesome Works</h6>
+                <h2>Наши<br class="title_br">Проекты</h2>
+                <h6>Великие и потрясающие работы</h6>
             </div>
-            <ul class="our_project_filter">
-                <li class="active" data-filter="*"><a href="#">All</a></li>
-                <li data-filter=".building"><a href="#">Buildings</a></li>
-                <li data-filter=".interior"><a href="#">Interior</a></li>
-                <li data-filter=".design"><a href="#">Design</a></li>
-                <li data-filter=".isolation"><a href="#">Isolation</a></li>
-                <li data-filter=".plumbing"><a href="#">Plumbing</a></li>
-                <li data-filter=".tiling"><a href="#">Tiling</a></li>
-            </ul>
+<!--            <ul class="our_project_filter">-->
+<!--                <li class="active" data-filter="*"><a href="#">All</a></li>-->
+<!--                <li data-filter=".building"><a href="#">Buildings</a></li>-->
+<!--                <li data-filter=".interior"><a href="#">Interior</a></li>-->
+<!--                <li data-filter=".design"><a href="#">Design</a></li>-->
+<!--                <li data-filter=".isolation"><a href="#">Isolation</a></li>-->
+<!--                <li data-filter=".plumbing"><a href="#">Plumbing</a></li>-->
+<!--                <li data-filter=".tiling"><a href="#">Tiling</a></li>-->
+<!--            </ul>-->
             <div class="our_project_details">
                 <div class="col-md-6 building isolation interior">
                     <div class="project_item">
-                        <img src="{% static 'img/project/project-two-column/project-two-1.jpg'%}" alt="">
+                        <img src="{% static 'img/project/project-two-column/Бразда_Вилла_800_550.jpg'%}" alt="">
                         <div class="project_hover">
                             <div class="project_hover_inner">
                                 <div class="project_hover_content">
@@ -151,7 +140,7 @@
                 </div>
                 <div class="col-md-6 building isolation tiling design">
                     <div class="project_item">
-                        <img src="{% static 'img/project/project-two-column/project-two-2.jpg'%}" alt="">
+                        <img src="{% static 'img/project/project-two-column/Офисное_здание_MultiGalaxy_800_550.png'%}" alt="">
                         <div class="project_hover">
                             <div class="project_hover_inner">
                                 <div class="project_hover_content">
@@ -165,7 +154,7 @@
                 </div>
                 <div class="col-md-6 isolation tiling interior design plumbing">
                     <div class="project_item">
-                        <img src="{% static 'img/project/project-two-column/project-two-3.jpg'%}" alt="">
+                        <img src="{% static 'img/project/project-two-column/гемонт_800_550.jpg'%}" alt="">
                         <div class="project_hover">
                             <div class="project_hover_inner">
                                 <div class="project_hover_content">
@@ -179,7 +168,7 @@
                 </div>
                 <div class="col-md-6 building isolation tiling plumbing">
                     <div class="project_item">
-                        <img src="{% static 'img/project/project-two-column/project-two-4.jpg'%}" alt="">
+                        <img src="{% static 'img/project/project-two-column/ЖД_Билла_800_550.jpg'%}" alt="">
                         <div class="project_hover">
                             <div class="project_hover_inner">
                                 <div class="project_hover_content">
@@ -193,7 +182,7 @@
                 </div>
                 <div class="col-md-6 isolation tiling interior plumbing">
                     <div class="project_item">
-                        <img src="{% static 'img/project/project-two-column/project-two-5.jpg'%}" alt="">
+                        <img src="{% static 'img/project/project-two-column/Эмералд_800_550.jpg'%}" alt="">
                         <div class="project_hover">
                             <div class="project_hover_inner">
                                 <div class="project_hover_content">
@@ -207,7 +196,7 @@
                 </div>
                 <div class="col-md-6 building isolation tiling design plumbing">
                     <div class="project_item">
-                        <img src="{% static 'img/project/project-two-column/project-two-6.jpg'%}" alt="">
+                        <img src="{% static 'img/project/project-two-column/Водоочистная_кайсери_800_550.jpg'%}" alt="">
                         <div class="project_hover">
                             <div class="project_hover_inner">
                                 <div class="project_hover_content">
