--- a/main_path/templates/main_path/services.html
+++ b/main_path/templates/main_path/services.html
@@ -70,33 +70,22 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                             </button>
-                            <a class="navbar-brand" href="#"><img src="{% static 'img/logo-TehStroy.png'%}" alt=""></a>
+                            <a class="navbar-brand" href="#"><img src="{% static 'img/logo-TehStroy (3).png'%}" alt=""></a>
                         </div>
 
                         <!-- Collect the nav links, forms, and other content for toggling -->
-                        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                             <ul class="nav navbar-nav navbar-right">
-                                <li class="dropdown submenu">
-                                    <a href="{% url 'index'%}" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Главная</a>
-<!--                                    <ul class="dropdown-menu">-->
-<!--                                        <li><a href="index.html">Home 01</a></li>-->
-<!--                                        <li><a href="index-2.html">Home 02</a></li>-->
-<!--                                    </ul>-->
+                                <li class="dropdown submenu active">
+                                    <a href="{% url 'index'%}">Главная</a>
                                 </li>
-                                <li class="dropdown submenu">
-                                    <a href="{% url 'projects'%}" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Проекты</a>
-<!--                                    <ul class="dropdown-menu">-->
-<!--                                        <li><a href="project-full-width.html">Project Full Width</a></li>-->
-<!--                                        <li><a href="project-grid-three-column.html">Project Grid 01</a></li>-->
-<!--                                        <li><a href="project-grid-two-column.html">Project Grid 02</a></li>-->
-<!--                                        <li><a href="project-three-column.html">Project Grid 03</a></li>-->
-<!--                                        <li><a href="project-single.html">Single Project</a></li>-->
-<!--                                    </ul>-->
+                                <li >
+                                    <a href="{% url 'projects'%}">Проекты</a>
                                 </li>
-                                <li class="active"><a href="#">Услуги</a></li>
-                                <li><a href="#">О нас</a></li>
+                                <li><a href="{% url 'services'%}">Услуги</a></li>
+                                <li><a href="">О нас</a></li>
 <!--                                <li><a href="blog-details.html">blog</a></li>-->
-                                <li><a href="{% url 'index'%}">Контакты</a></li>
+                                <li><a href="#">Контакты</a></li>
 <!--                                <li class="icon_search"><a href="#"><i class="mdi mdi-cart"></i></a></li>-->
                             </ul>
                         </div><!-- /.navbar-collapse -->
@@ -125,16 +114,18 @@
             <div class="chose_left_text">
                 <div class="chose_text_inner">
                     <div class="main_b_title">
-                        <h2>Why <br class="title_br"> Choose Us?</h2>
-                        <h6>Play Welcome Video</h6>
+                        <h2>Почему <br class="title_br">Выбирают нас?</h2>
+<!--                        <h6>Play Welcome Video</h6>-->
                     </div>
-                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. </p>
+                    <p>Наша строительная компания – это надежный партнер для реализации ваших строительных проектов. Мы гордимся своим опытом и профессионализмом, что делает нас привлекательным выбором для наших клиентов. </p>
                     <ul>
-                        <li><a href="#"><i class="fa fa-check" aria-hidden="true"></i>We Are Creative</a></li>
-                        <li><a href="#"><i class="fa fa-check" aria-hidden="true"></i>Honest And Dependable</a></li>
-                        <li><a href="#"><i class="fa fa-check" aria-hidden="true"></i>Quality Commitment</a></li>
-                        <li><a href="#"><i class="fa fa-check" aria-hidden="true"></i>We Are Always Improving</a></li>
+                        <li><a href="#"><i class="fa fa-check" aria-hidden="true"></i>Креативность</a></li>
+                        <li><a href="#"><i class="fa fa-check" aria-hidden="true"></i>Прозрачность и честность</a></li>
+                        <li><a href="#"><i class="fa fa-check" aria-hidden="true"></i>Соблюдение сроков</a></li>
+                        <li><a href="#"><i class="fa fa-check" aria-hidden="true"></i>Высокое качество работы</a></li>
+                        <li><a href="#"><i class="fa fa-check" aria-hidden="true"></i>Индивидуальный подход к каждому клиенту</a></li>
                     </ul>
+
                 </div>
             </div>
             <div class="chose_video_right">
@@ -149,17 +140,17 @@
         <!--================Others Service Area =================-->
         <section class="other_service_area">
             <div class="container">
-                <h4 class="project_title">Our Other Services</h4>
+                <h4 class="project_title">НАШИ УСЛУГИ</h4>
                 <div class="service2_inner other_service_slider owl-carousel">
                     <div class="item">
                         <div class="service2_item">
                             <div class="service2_item_inner">
                                 <div class="service2_item_inner_content">
                                     <div class="service_icon">
-                                        <img src="{% static 'img/icon/s2-icon-1.png '%}" alt="">
-                                        <img src="{% static 'img/icon/s2-icon-hover-1.png'%}" alt="">
+                                        <img src="{% static 'img/icon/stroitelstvo.png'%}" alt="">
+                                        <img src="{% static 'img/icon/stroitelstvo.png'%}" alt="">
                                     </div>
-                                    <h4>NEW-CONSTRUCTION</h4>
+                                    <h4>СТРОИТЕЛЬСТВО ЖИЛЫХ ЗДАНИЙ</h4>
                                     <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium dolorem-que laudantium totam rem aperiam.</p>
                                     <a class="view_btn" href="#">Read Details</a>
                                 </div>
@@ -171,10 +162,10 @@
                             <div class="service2_item_inner">
                                 <div class="service2_item_inner_content">
                                     <div class="service_icon">
-                                        <img src="{% static 'img/icon/s2-icon-2.png'%}" alt="">
-                                        <img src="{% static 'img/icon/s2-icon-hover-2.png'%}" alt="">
+                                        <img src="{% static 'img/icon/Construction.png'%}" alt="">
+                                        <img src="{% static 'img/icon/Construction.png'%}" alt="">
                                     </div>
-                                    <h4>LOCATION</h4>
+                                    <h4>СТРОИТЕЛЬСТВО КОММЕРЧЕСКИХ ЗДАНИЙ</h4>
                                     <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium dolorem-que laudantium totam rem aperiam.</p>
                                     <a class="view_btn" href="#">Read Details</a>
                                 </div>
@@ -186,10 +177,55 @@
                             <div class="service2_item_inner">
                                 <div class="service2_item_inner_content">
                                     <div class="service_icon">
-                                        <img src="{% static 'img/icon/s2-icon-3.png'%}" alt="">
-                                        <img src="{% static 'img/icon/s2-icon-hover-3.png'%}" alt="">
+                                        <img src="{% static 'img/icon/Otdelka.png'%}" alt="">
+                                        <img src="{% static 'img/icon/Otdelka.png'%}" alt="">
                                     </div>
-                                    <h4>REMODEL & REIMAGE</h4>
+                                    <h4>ОТДЕЛОЧНЫЕ РАБОТЫ</h4>
+                                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium dolorem-que laudantium totam rem aperiam.</p>
+                                    <a class="view_btn" href="#">Read Details</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="service2_item">
+                            <div class="service2_item_inner">
+                                <div class="service2_item_inner_content">
+                                    <div class="service_icon">
+                                        <img src="{% static 'img/icon/electric.jpg'%}" alt="">
+                                        <img src="{% static 'img/icon/electric.jpg'%}" alt="">
+                                    </div>
+                                    <h4>Электрические работы</h4>
+                                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium dolorem-que laudantium totam rem aperiam.</p>
+                                    <a class="view_btn" href="#">Read Details</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="service2_item">
+                            <div class="service2_item_inner">
+                                <div class="service2_item_inner_content">
+                                    <div class="service_icon">
+                                        <img src="{% static 'img/icon/industrial.png'%}" alt="">
+                                        <img src="{% static 'img/icon/industrial.png'%}" alt="">
+                                    </div>
+                                    <h4>ИНДУСТРИАЛЬНЫЕ РАБОТЫ</h4>
+                                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium dolorem-que laudantium totam rem aperiam.</p>
+                                    <a class="view_btn" href="#">Read Details</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="service2_item">
+                            <div class="service2_item_inner">
+                                <div class="service2_item_inner_content">
+                                    <div class="service_icon">
+                                        <img src="{% static 'img/icon/Vodoochistnie.png'%}" alt="">
+                                        <img src="{% static 'img/icon/Vodoochistnie.png'%}" alt="">
+                                    </div>
+                                    <h4>Водоочистные работы</h4>
                                     <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium dolorem-que laudantium totam rem aperiam.</p>
                                     <a class="view_btn" href="#">Read Details</a>
                                 </div>
@@ -241,12 +277,26 @@
                     <div class="row s_text_inner">
                         <div class="col-md-6">
                             <div class="left_service_desc">
-                                <h4 class="project_title">Service Description</h4>
-                                <p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed semper, lacus sed feugiat dictum, tellus ipsum auctor quam, non faucibus dui nisl et elit. Morbi eu interdum velit. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit consequatur?</p>
+                                <h4 class="project_title">Описание услуг</h4>
+                                <p>Наша строительная компания предлагает широкий спектр услуг для реализации любых строительных проектов. Мы специализируемся на следующих видов работ:
+                                    <br>
+
+1. <b>Строительство жилых и коммерческих зданий:</b> Наша команда опытных специалистов обладает знаниями и навыками для строительства как жилых, так и коммерческих объектов. Мы предлагаем полный цикл работ – от проектирования до сдачи объекта под ключ.
+                                    <br>
+2. <b>Отделочные работы:</b> Мы проводим отделочные работы любой сложности, включая укладку напольных покрытий, установку дверей и окон, покраску стен, монтаж потолков и другие работы, чтобы ваш интерьер был завершенным и стильным.
+                                    <br>
+3. <b>Электрические работы:</b> Наши специалисты гарантируют качественное выполнение электрических работ – установку электропроводки, монтаж электрических приборов, освещения, автоматики и других систем, обеспечивая безопасность и надежность вашего электроснабжения.
+                                    <br>
+4. <b>Индустриальные работы:</b> Мы осуществляем строительство и ремонт промышленных объектов, складов, производственных цехов, а также укрепление и реконструкцию промышленных сооружений с использованием современных технологий и материалов.
+                                    <br>
+5. <b>Водоочистные работы:</b> Наша компания предоставляет услуги по проектированию, монтажу и обслуживанию систем водоочистки для различных объектов – от квартир до промышленных предприятий, обеспечивая чистоту и качество воды в вашем доме или офисе.
+                                    <br>
+                                    <br>
+Мы гарантируем высокое качество выполнения всех работ, соблюдение сроков и индивидуальный подход к каждому клиенту. Обратившись к нам, вы получите надежного партнера для реализации ваших строительных проектов с профессионализмом и ответственностью.</p>
                                 <ul>
-                                    <li><a href="#"><i class="fa fa-home" aria-hidden="true"></i>We are responsible</a></li>
-                                    <li><a href="#"><i class="fa fa-wrench" aria-hidden="true"></i>We take everything under control</a></li>
-                                    <li><a href="#"><i class="fa fa-lightbulb-o" aria-hidden="true"></i>Presented in 26 countries</a></li>
+                                    <li><a href="#"><i class="fa fa-home" aria-hidden="true"></i>Мы ответственные</a></li>
+                                    <li><a href="#"><i class="fa fa-wrench" aria-hidden="true"></i>Мы берем все под контроль</a></li>
+                                    <li><a href="#"><i class="fa fa-lightbulb-o" aria-hidden="true"></i>Работали в Румынии, Турции и России</a></li>
                                 </ul>
                             </div>
                         </div>
