changing the project

--- a/main_path/templates/main_path/services.html
+++ b/main_path/templates/main_path/services.html
@@ -302,7 +302,7 @@
                         </div>
                         <div class="col-md-6">
                             <div class="our_skill_inner">
-                                <h4 class="project_title">Service Description</h4>
+                                <h4 class="project_title"></h4>
                                 <div class="single_skill">
                                     <h3>Repairing</h3>
                                     <div class="progress">
