--- a/main_path/templates/main_path/index.html
+++ b/main_path/templates/main_path/index.html
@@ -259,12 +259,12 @@
                         <div class="b_companu_l_text">
                             <h4>МЫ - ОДНА ИЗ ЛУЧШИХ СТРОИТЕЛЬНЫХ КОМПАНИЙ</h4>
                             <p>Мы являемся одной из лучших строительных компаний благодаря нашему богатому опыту, высокому профессионализму наших сотрудников и индивидуальному подходу к каждому проекту. Мы стремимся к высочайшему качеству выполнения работ, соблюдая сроки и бюджет, и всегда идем в ногу с новейшими технологиями и тенденциями в строительной отрасли. Наша репутация надежной и ответственной компании, способной реализовать даже самые сложные проекты, делает нас одними из лидеров в отрасли.</p>
-                            <a class="slider_btn" href="#">read more</a>
+                            <a class="slider_btn" href="#">Подробнее о нас</a>
                         </div>
                     </div>
                     <div class="col-md-7">
                         <div class="b_company_image">
-                            <img src="{% static 'img/b-company-img.png'%}" alt="">
+                            <img src="{% static 'img/лучшая_компания (1).png'%}" alt="">
                         </div>
                     </div>
                 </div>
@@ -289,7 +289,7 @@
                                         <img src="{% static 'img/icon/stroitelstvo.png'%}" alt="">
                                     </div>
                                     <h4>СТРОИТЕЛЬСТВО ЖИЛЫХ ЗДАНИЙ</h4>
-                                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium dolorem-que laudantium totam rem aperiam.</p>
+                                    <p>Наша компания предлагает профессиональные услуги по строительству жилых зданий, где каждый проект выполняется с учетом индивидуальных потребностей клиента и с соблюдением высоких стандартов качества.</p>
                                     <a class="view_btn" href="#">Read Details</a>
                                 </div>
                             </div>
@@ -304,8 +304,8 @@
                                         <img src="{% static 'img/icon/Construction.png'%}" alt="">
                                     </div>
                                     <h4>СТРОИТЕЛЬСТВО КОММЕРЧЕСКИХ ЗДАНИЙ</h4>
-                                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium dolorem-que laudantium totam rem aperiam.</p>
-                                    <a class="view_btn" href="#">Read Details</a>
+                                    <p>Наша компания специализируется на строительстве коммерческих зданий любой сложности, предлагая индивидуальный подход к каждому проекту и высокий уровень профессионализма.</p>
+<!--                                    <a class="view_btn" href="#">Read Details</a>-->
                                 </div>
                             </div>
                         </div>
@@ -330,8 +330,8 @@
                             <div class="service2_item_inner">
                                 <div class="service2_item_inner_content">
                                     <div class="service_icon">
-                                        <img src="{% static 'img/icon/electric.jpg'%}" alt="">
-                                        <img src="{% static 'img/icon/electric.jpg'%}" alt="">
+                                        <img src="{% static 'img/icon/electro_logo (1).png'%}" alt="">
+                                         <img src="{% static 'img/icon/electro (1).png'%}" alt="">
                                     </div>
                                     <h4>Электрические работы</h4>
                                     <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium dolorem-que laudantium totam rem aperiam.</p>
@@ -345,7 +345,7 @@
                             <div class="service2_item_inner">
                                 <div class="service2_item_inner_content">
                                     <div class="service_icon">
-                                        <img src="{% static 'img/icon/industrial.png'%}" alt="">
+                                        <img src="{% static 'img/icon/industrial_logo.png'%}" alt="">
                                         <img src="{% static 'img/icon/industrial.png'%}" alt="">
                                     </div>
                                     <h4>ИНДУСТРИАЛЬНЫЕ РАБОТЫ</h4>
@@ -374,7 +374,40 @@
             </div>
         </section>
         <!--================End Our Service2 Area =================-->
-
+        <section class="counter_area">
+            <div class="container">
+                <div class="row counter_inner">
+                    <div class="col-md-3 col-sm-6">
+                        <div class="counter_item">
+                            <i class="fa fa-archive" aria-hidden="true"></i>
+                            <h4 class="counter">43</h4>
+                            <h5>Всего проектов</h5>
+                        </div>
+                    </div>
+                    <div class="col-md-3 col-sm-6">
+                        <div class="counter_item">
+                            <i class="fa fa-building-o" aria-hidden="true"></i>
+                            <h4 class="counter">5</h4>
+                            <h5>Жилых домов</h5>
+                        </div>
+                    </div>
+                    <div class="col-md-3 col-sm-6">
+                        <div class="counter_item">
+                            <i class="fa fa-users" aria-hidden="true"></i>
+                            <h4 class="counter">40</h4>
+                            <h5>Количество сотрудников</h5>
+                        </div>
+                    </div>
+                    <div class="col-md-3 col-sm-6">
+                        <div class="counter_item">
+                            <i class="fa fa-smile-o" aria-hidden="true"></i>
+                            <h4 class="counter">94</h4>
+                            <h5>Довольных клиентов</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <!--================Our Project2 Area =================-->
         <section class="our_project2_area">
             <div class="container">
@@ -398,7 +431,7 @@
                             <div class="project_hover">
                                 <div class="project_hover_inner">
                                     <div class="project_hover_content">
-                                        <a href="#"><h4>Жилой дом "Тюльпан"</h4></a>
+                                        <a><h4>Жилой дом "Тюльпан"</h4></a>
                                         <p>Площадь проведения строительных работ: 32.000 м<sup>2</sup>
                                         Коммерческая площадь: 1700 м<sup>2</sup>
                                         Этажи : UG + 18 этажей</p>
@@ -414,7 +447,7 @@
                             <div class="project_hover">
                                 <div class="project_hover_inner">
                                     <div class="project_hover_content">
-                                        <a href="#"><h4>Жилой дом «Бразда Вилла»</h4></a>
+                                        <a><h4>Жилой дом «Бразда Вилла»</h4></a>
                                         <p>Площадь проведения строительных работ: 2.000 м<sup>2</sup>
                                             <br>Количество квартир: 20
                                             <br>Этажи: Подвал + 4 Этажа
@@ -431,7 +464,7 @@
                             <div class="project_hover">
                                 <div class="project_hover_inner">
                                     <div class="project_hover_content">
-                                        <a href="#"><h4>Водоочистная станция в г.Сибиу, Румыния</h4></a>
+                                        <a><h4>Водоочистная станция в г.Сибиу, Румыния</h4></a>
                                         <p>Сроки работы: январь 2006-июль 2007</p>
 <!--                                        <a class="view_btn" href="#">View Project</a>-->
                                     </div>
@@ -445,7 +478,7 @@
                             <div class="project_hover">
                                 <div class="project_hover_inner">
                                     <div class="project_hover_content">
-                                        <a href="#"><h4>Август-Алабуга</h4></a>
+                                        <a><h4>Август-Алабуга</h4></a>
                                         <p>Сроки работы: 01.05.2017-31.08.2018 <br>Объём бетона: 4500 м<sup>3</sup></p>
                                         <a class="view_btn" href="#">View Project</a>
                                     </div>
@@ -459,7 +492,7 @@
                             <div class="project_hover">
                                 <div class="project_hover_inner">
                                     <div class="project_hover_content">
-                                        <a href="#"><h4>Офисное здание "MultiGalaxy"</h4></a>
+                                        <a><h4>Офисное здание "MultiGalaxy"</h4></a>
                                         <p>Сроки работы: 02.04.2007-15.06.2008
                                             <br>Площадь проведения строительных работ: 20.000 м<sup>2</sup>
                                             <br>Объём бетона: 11.000 м<sup>3</sup>
@@ -476,7 +509,7 @@
                             <div class="project_hover">
                                 <div class="project_hover_inner">
                                     <div class="project_hover_content">
-                                        <a href="#"><h4>Kastamonu Entegre Russia</h4></a>
+                                        <a><h4>Kastamonu Entegre Russia</h4></a>
                                         <p>Объект : 125.000 м<sup>2</sup></p>
 <!--                                        <a class="view_btn" href="#">View Project</a>-->
                                     </div>
