--- a/static/css/style.css
+++ b/static/css/style.css
@@ -256,7 +256,7 @@ iframe {
 .main_c_b_title h6 {
   font-size: 15px;
   font-family: "PT Sans", sans-serif;
-  color: #ffcd00;
+  color: black;
   font-weight: bold;
   padding-top: 12px;
 }
@@ -1636,10 +1636,11 @@ iframe {
 .b_companu_l_text .slider_btn {
   padding: 0px 40px;
   line-height: 46px;
+  border: 2px solid #d4d4d4;
 }
 
 .b_companu_l_text .slider_btn:hover {
-  color: #ffcd00;
+  color: black;
 }
 
 /* End Best Company area css
@@ -1665,7 +1666,7 @@ iframe {
 }
 
 .service2_inner .service2_item {
-  height: 304px;
+  height: 420px;
 }
 
 .service2_inner .service2_item .service2_item_inner {
@@ -1719,32 +1720,12 @@ iframe {
 }
 
 .service2_inner .service2_item:hover .service2_item_inner {
-  -webkit-transform: rotateY(180deg);
-  transform: rotateY(180deg);
-  background: #ffcd00;
+  background: #c0c0c0;
 }
 
-.service2_inner .service2_item:hover .service2_item_inner .service2_item_inner_content {
-  -webkit-transform: rotateY(-180deg);
-  transform: rotateY(-180deg);
-}
 
-.service2_inner .service2_item:hover .service2_item_inner .service2_item_inner_content .service_icon img {
-  opacity: 0;
-}
 
-.service2_inner .service2_item:hover .service2_item_inner .service2_item_inner_content .service_icon img + img {
-  opacity: 1;
-}
 
-.service2_inner .service2_item:hover .service2_item_inner .service2_item_inner_content p {
-  display: none;
-}
-
-.service2_inner .service2_item:hover .service2_item_inner .service2_item_inner_content .view_btn {
-  visibility: visible;
-  opacity: 1;
-}
 
 /* End Our Service2 area css
 ============================================================================================ */
@@ -2244,7 +2225,7 @@ iframe {
 ============================================================================================ */
 .counter_area {
   background: #31353d;
-  padding: 60px 0px;
+  padding: 40px 0px;
 }
 
 .counter_item {
