changing the project1

--- a/main_path/templates/main_path/index.html
+++ b/main_path/templates/main_path/index.html
@@ -182,7 +182,7 @@
                             data-paddingtop="[0,0,0,0]"
                             data-paddingright="[0,0,0,0]"
                             data-paddingbottom="[0,0,0,0]"
-                            data-paddingleft="[0,0,0,0]">We are weBuilder</div>
+                            data-paddingleft="[0,0,0,0]">ТЕХСТРОЙ</div>
 
                             <div class="tp-caption secand_text"
                             data-x="['center','center','center','center']"
@@ -201,7 +201,7 @@
                             data-paddingtop="[0,0,0,0]"
                             data-paddingright="[0,0,0,0]"
                             data-paddingbottom="[10,10,10,10]"
-                            data-paddingleft="[0,0,0,0]">we innovate </div>
+                            data-paddingleft="[0,0,0,0]">Создаем вместе</div>
                         </div>
                     </li>
                 </ul>
@@ -374,40 +374,7 @@
             </div>
         </section>
         <!--================End Our Service2 Area =================-->
-        <section class="counter_area">
-            <div class="container">
-                <div class="row counter_inner">
-                    <div class="col-md-3 col-sm-6">
-                        <div class="counter_item">
-                            <i class="fa fa-archive" aria-hidden="true"></i>
-                            <h4 class="counter">43</h4>
-                            <h5>Всего проектов</h5>
-                        </div>
-                    </div>
-                    <div class="col-md-3 col-sm-6">
-                        <div class="counter_item">
-                            <i class="fa fa-building-o" aria-hidden="true"></i>
-                            <h4 class="counter">5</h4>
-                            <h5>Жилых домов</h5>
-                        </div>
-                    </div>
-                    <div class="col-md-3 col-sm-6">
-                        <div class="counter_item">
-                            <i class="fa fa-users" aria-hidden="true"></i>
-                            <h4 class="counter">40</h4>
-                            <h5>Количество сотрудников</h5>
-                        </div>
-                    </div>
-                    <div class="col-md-3 col-sm-6">
-                        <div class="counter_item">
-                            <i class="fa fa-smile-o" aria-hidden="true"></i>
-                            <h4 class="counter">94</h4>
-                            <h5>Довольных клиентов</h5>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
+
         <!--================Our Project2 Area =================-->
         <section class="our_project2_area">
             <div class="container">
@@ -521,7 +488,40 @@
             </div>
         </section>
         <!--================End Our Project2 Area =================-->
-
+<section class="counter_area">
+            <div class="container">
+                <div class="row counter_inner">
+                    <div class="col-md-3 col-sm-6">
+                        <div class="counter_item">
+                            <i class="fa fa-archive" aria-hidden="true"></i>
+                            <h4 class="counter">43</h4>
+                            <h5>Всего проектов</h5>
+                        </div>
+                    </div>
+                    <div class="col-md-3 col-sm-6">
+                        <div class="counter_item">
+                            <i class="fa fa-building-o" aria-hidden="true"></i>
+                            <h4 class="counter">5</h4>
+                            <h5>Жилых домов</h5>
+                        </div>
+                    </div>
+                    <div class="col-md-3 col-sm-6">
+                        <div class="counter_item">
+                            <i class="fa fa-users" aria-hidden="true"></i>
+                            <h4 class="counter">40</h4>
+                            <h5>Количество сотрудников</h5>
+                        </div>
+                    </div>
+                    <div class="col-md-3 col-sm-6">
+                        <div class="counter_item">
+                            <i class="fa fa-smile-o" aria-hidden="true"></i>
+                            <h4 class="counter">94</h4>
+                            <h5>Довольных клиентов</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <!--================Quoto Slider Area =================-->
         <section class="quoto_slider_area">
             <div class="container">
