--- a/main_path/templates/main_path/services.html
+++ b/main_path/templates/main_path/services.html
@@ -76,13 +76,14 @@
                         <!-- Collect the nav links, forms, and other content for toggling -->
                           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                             <ul class="nav navbar-nav navbar-right">
-                                <li class="dropdown submenu active">
+                                <li>
                                     <a href="{% url 'index'%}">Главная</a>
                                 </li>
                                 <li >
                                     <a href="{% url 'projects'%}">Проекты</a>
                                 </li>
-                                <li><a href="{% url 'services'%}">Услуги</a></li>
+                                <li  class="dropdown submenu active">
+                                    <a href="{% url 'services'%}">Услуги</a></li>
                                 <li><a href="">О нас</a></li>
 <!--                                <li><a href="blog-details.html">blog</a></li>-->
                                 <li><a href="#">Контакты</a></li>
