--- a/static/css/responsive.css
+++ b/static/css/responsive.css
@@ -115,6 +115,8 @@
 		float: none;
 		padding-right: 15px;
 		padding-left: 15px;
+		margin: 0 auto; /* Центрирование блока по горизонтали */
+
 	}
 	.chose_video_area .chose_video_right {
 		width: 100%;
@@ -138,13 +140,13 @@
 	.navbar-toggle {
 		margin-top: 20px;
 		margin-bottom: 20px;
-		border: 1px solid #ffcd00 !important;
+		border: 1px solid black !important;
 		border-radius: 0px;
 		background: transparent !important;
 		margin-right: 0px;
 	}
 	.navbar-toggle .icon-bar {
-		background-color: #ffcd00 !important;
+		background-color: #0891a4 !important;
 	}
 	.main_slider_area .rev_slider .tp-bullets .tp-bullet:hover, .main_slider_area .rev_slider .tp-bullets .tp-bullet.selected {
 		display: none;
@@ -228,7 +230,7 @@
 		line-height: 46px;
 	}
 	.our_project2_area.our_project_two_column .our_project_details .col-md-6 {
-		padding: 0px;
+
 		width: 100%;
 	}
 	.project_grid_two .our_project_details{
@@ -349,7 +351,7 @@
 		font-size: 12px;
 	}
 	.our_project_details .project_item .project_hover {
-		padding: 0px;
+		padding: 10px;
 	}
 	.our_project2_area.our_project_two_column .our_project_details .project_item .project_hover .project_hover_inner .project_hover_content h4 {
 		font-size: 18px;
