editing service cards on the main page

--- a/main_path/templates/main_path/index.html
+++ b/main_path/templates/main_path/index.html
@@ -289,8 +289,7 @@
                                         <img src="{% static 'img/icon/stroitelstvo.png'%}" alt="">
                                     </div>
                                     <h4>СТРОИТЕЛЬСТВО ЖИЛЫХ ЗДАНИЙ</h4>
-                                    <p>Наша компания предлагает профессиональные услуги по строительству жилых зданий, где каждый проект выполняется с учетом индивидуальных потребностей клиента и с соблюдением высоких стандартов качества.</p>
-                                    <a class="view_btn" href="#">Read Details</a>
+                                    <p>Наша строительная компания специализируется на строительстве жилых зданий высокого качества, которые станут идеальным домом для вас и вашей семьи. Мы используем только качественные материалы и самые современные технологии, чтобы обеспечить долговечность и надежность каждого нашего проекта.</p>
                                 </div>
                             </div>
                         </div>
@@ -304,8 +303,7 @@
                                         <img src="{% static 'img/icon/Construction.png'%}" alt="">
                                     </div>
                                     <h4>СТРОИТЕЛЬСТВО КОММЕРЧЕСКИХ ЗДАНИЙ</h4>
-                                    <p>Наша компания специализируется на строительстве коммерческих зданий любой сложности, предлагая индивидуальный подход к каждому проекту и высокий уровень профессионализма.</p>
-<!--                                    <a class="view_btn" href="#">Read Details</a>-->
+                                    <p>Наша команда профессионалов имеет богатый опыт в строительстве различных типов коммерческих объектов, включая торговые центры, офисные здания, складские комплексы и другие. Мы используем современные технологии и качественные материалы, чтобы обеспечить долговечность и функциональность каждого проекта.</p>
                                 </div>
                             </div>
                         </div>
@@ -319,8 +317,8 @@
                                         <img src="{% static 'img/icon/Otdelka.png'%}" alt="">
                                     </div>
                                     <h4>ОТДЕЛОЧНЫЕ РАБОТЫ</h4>
-                                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium dolorem-que laudantium totam rem aperiam.</p>
-                                    <a class="view_btn" href="#">Read Details</a>
+                                    <p>Наша строительная компания предлагает полный спектр услуг по отделочным работам, которые помогут превратить ваш дом в уютное и стильное пространство. Мы проводим качественные отделочные работы, включающие в себя установку напольных покрытий, обоев, покраску стен и потолков, монтаж сантехнического оборудования, установка окон.</p>
+
                                 </div>
                             </div>
                         </div>
@@ -334,8 +332,7 @@
                                          <img src="{% static 'img/icon/electro (1).png'%}" alt="">
                                     </div>
                                     <h4>Электрические работы</h4>
-                                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium dolorem-que laudantium totam rem aperiam.</p>
-                                    <a class="view_btn" href="#">Read Details</a>
+                                    <p>Мы осуществляем установку и подключение электрической проводки, монтаж электрических щитов, установку и настройку электрических приборов и оборудования, а также проведение диагностики и ремонта электрооборудования. Мы также можем помочь вам с установкой системы освещения, розеток, выключателей, автоматических выключателей.</p>
                                 </div>
                             </div>
                         </div>
@@ -349,8 +346,7 @@
                                         <img src="{% static 'img/icon/industrial.png'%}" alt="">
                                     </div>
                                     <h4>ИНДУСТРИАЛЬНЫЕ РАБОТЫ</h4>
-                                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium dolorem-que laudantium totam rem aperiam.</p>
-                                    <a class="view_btn" href="#">Read Details</a>
+                                    <p>Мы предлагаем профессиональные услуги по выполнению индустриальных работ для различных объектов и предприятий. Мы специализируемся на строительстве промышленных зданий, монтаже оборудования, установке технологических линий, прокладке инженерных коммуникаций, а также реконструкции и модернизации промышленных объектов.</p>
                                 </div>
                             </div>
                         </div>
@@ -364,8 +360,7 @@
                                         <img src="{% static 'img/icon/Vodoochistnie.png'%}" alt="">
                                     </div>
                                     <h4>Водоочистные работы</h4>
-                                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium dolorem-que laudantium totam rem aperiam.</p>
-                                    <a class="view_btn" href="#">Read Details</a>
+                                    <p>Наша строительная компания предлагает профессиональные водоочистные работы для обеспечения чистой и безопасной воды на вашем объекте. Наши специалисты имеют богатый опыт в области водоочистки и работают с современным оборудованием, что позволяет нам эффективно удалять загрязнения, бактерии, хлор и другие примеси из воды.</p>
                                 </div>
                             </div>
                         </div>
