--- a/main_path/templates/main_path/services.html
+++ b/main_path/templates/main_path/services.html
@@ -152,8 +152,8 @@
                                         <img src="{% static 'img/icon/stroitelstvo.png'%}" alt="">
                                     </div>
                                     <h4>СТРОИТЕЛЬСТВО ЖИЛЫХ ЗДАНИЙ</h4>
-                                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium dolorem-que laudantium totam rem aperiam.</p>
-                                    <a class="view_btn" href="#">Read Details</a>
+                                    <p>Наша строительная компания специализируется на строительстве жилых зданий высокого качества, которые станут идеальным домом для вас и вашей семьи. Мы используем только качественные материалы и современные технологии, чтобы обеспечить долговечность и надежность каждого нашего проекта.</p>
+<!--                                    <a class="view_btn" href="#">Read Details</a>-->
                                 </div>
                             </div>
                         </div>
@@ -167,8 +167,8 @@
                                         <img src="{% static 'img/icon/Construction.png'%}" alt="">
                                     </div>
                                     <h4>СТРОИТЕЛЬСТВО КОММЕРЧЕСКИХ ЗДАНИЙ</h4>
-                                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium dolorem-que laudantium totam rem aperiam.</p>
-                                    <a class="view_btn" href="#">Read Details</a>
+                                    <p>Наша команда профессионалов имеет богатый опыт в строительстве различных типов коммерческих объектов, включая торговые центры, офисные здания, складские комплексы и другие. Мы используем современные технологии и качественные материалы, чтобы обеспечить долговечность и функциональность каждого проекта.</p>
+<!--                                    <a class="view_btn" href="#">Read Details</a>-->
                                 </div>
                             </div>
                         </div>
