--- a/main_path/templates/main_path/services.html
+++ b/main_path/templates/main_path/services.html
@@ -182,8 +182,8 @@
                                         <img src="{% static 'img/icon/Otdelka.png'%}" alt="">
                                     </div>
                                     <h4>ОТДЕЛОЧНЫЕ РАБОТЫ</h4>
-                                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium dolorem-que laudantium totam rem aperiam.</p>
-                                    <a class="view_btn" href="#">Read Details</a>
+                                    <p>Наша строительная компания предлагает полный спектр услуг по отделочным работам, которые помогут превратить ваш дом в уютное и стильное пространство. Мы проводим качественные отделочные работы, включающие в себя установку напольных покрытий, обоев, покраску стен и потолков, монтаж сантехнического оборудования, установка окон.</p>
+
                                 </div>
                             </div>
                         </div>
@@ -192,13 +192,12 @@
                         <div class="service2_item">
                             <div class="service2_item_inner">
                                 <div class="service2_item_inner_content">
-                                    <div class="service_icon">
-                                        <img src="{% static 'img/icon/electric.jpg'%}" alt="">
-                                        <img src="{% static 'img/icon/electric.jpg'%}" alt="">
+                                                                        <div class="service_icon">
+                                        <img src="{% static 'img/icon/electro_logo (1).png'%}" alt="">
+                                         <img src="{% static 'img/icon/electro (1).png'%}" alt="">
                                     </div>
                                     <h4>Электрические работы</h4>
-                                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium dolorem-que laudantium totam rem aperiam.</p>
-                                    <a class="view_btn" href="#">Read Details</a>
+                                    <p>Мы осуществляем установку и подключение электрической проводки, монтаж электрических щитов, установку и настройку электрических приборов и оборудования, а также проведение диагностики и ремонта электрооборудования. Мы также можем помочь вам с установкой системы освещения, розеток, выключателей, автоматических выключателей.</p>
                                 </div>
                             </div>
                         </div>
@@ -207,13 +206,12 @@
                         <div class="service2_item">
                             <div class="service2_item_inner">
                                 <div class="service2_item_inner_content">
-                                    <div class="service_icon">
-                                        <img src="{% static 'img/icon/industrial.png'%}" alt="">
+                                      <div class="service_icon">
+                                        <img src="{% static 'img/icon/industrial_logo.png'%}" alt="">
                                         <img src="{% static 'img/icon/industrial.png'%}" alt="">
                                     </div>
                                     <h4>ИНДУСТРИАЛЬНЫЕ РАБОТЫ</h4>
-                                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium dolorem-que laudantium totam rem aperiam.</p>
-                                    <a class="view_btn" href="#">Read Details</a>
+                                    <p>Мы предлагаем профессиональные услуги по выполнению индустриальных работ для различных объектов и предприятий. Мы специализируемся на строительстве промышленных зданий, монтаже оборудования, установке технологических линий, прокладке инженерных коммуникаций, а также реконструкции и модернизации промышленных объектов.</p>
                                 </div>
                             </div>
                         </div>
@@ -222,13 +220,12 @@
                         <div class="service2_item">
                             <div class="service2_item_inner">
                                 <div class="service2_item_inner_content">
-                                    <div class="service_icon">
+                                   <div class="service_icon">
                                         <img src="{% static 'img/icon/Vodoochistnie.png'%}" alt="">
                                         <img src="{% static 'img/icon/Vodoochistnie.png'%}" alt="">
                                     </div>
                                     <h4>Водоочистные работы</h4>
-                                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium dolorem-que laudantium totam rem aperiam.</p>
-                                    <a class="view_btn" href="#">Read Details</a>
+                                    <p>Наша строительная компания предлагает профессиональные водоочистные работы для обеспечения чистой и безопасной воды на вашем объекте. Наши специалисты имеют богатый опыт в области водоочистки и работают с современным оборудованием, что позволяет нам эффективно удалять загрязнения, бактерии, хлор и другие примеси из воды.</p>
                                 </div>
                             </div>
                         </div>
@@ -340,8 +337,8 @@
                             <div class="service_brochure">
                                 <h4 class="project_title">Service Description</h4>
                                 <p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed semper, lacus sed feugiat dictum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore.</p>
-                                <a href="#"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>Download PDF</a>
-                                <a href="#"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>Download DOC</a>
+                                <a href="#"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>Скачать PDF</a>
+                                <a href="#"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>Скачать DOC</a>
                             </div>
                         </div>
                     </div>
@@ -353,7 +350,7 @@
         <!--================Our Latest Project Area =================-->
         <section class="our_latest_project">
             <div class="container">
-                <h3 class="out_title">Our Latest projects</h3>
+                <h3 class="out_title">Наши последние проекты</h3>
                 <div class="our_latest_slider owl-carousel">
                     <div class="item">
                         <div class="project_item">
@@ -418,50 +415,50 @@
 
         <!--================Footer Area =================-->
         <footer class="footer_area">
-            <div class="footer_widgets_area">
+            <div class="footer_widgets_area footer_bg">
                 <div class="container">
                     <div class="row footer_widgets_inner">
                         <div class="col-md-3 col-sm-6">
                             <aside class="f_widget about_widget">
-                                <img src="{% static 'img/footer-logo.png'%}" alt="">
-                                <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusan-tium doloremque laudantium. ed quia consequuntur magni dolores eos qui ratione.</p>
-                                <ul>
-                                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
-                                </ul>
+                                <img src="{% static 'img/logo-TehStroy (3).png'%}" alt="">
+                                <p>Мы строим дома с любовью и профессионализмом, чтобы ваша мечта об идеальном жилье стала реальностью. Мы - надежный партнер в реализации вашего строительного проекта.</p>
+<!--                                <ul>-->
+<!--                                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>-->
+<!--                                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>-->
+<!--                                    <li><a href="#"><i class="fa fa-google-plus"></i></a></li>-->
+<!--                                    <li><a href="#"><i class="fa fa-pinterest"></i></a></li>-->
+<!--                                </ul>-->
                             </aside>
                         </div>
-                        <div class="col-md-3 col-sm-6">
-                            <aside class="f_widget recent_widget">
-                                <div class="f_w_title">
-                                    <h3>Recent Posts</h3>
-                                </div>
-                                <div class="recent_w_inner">
-                                    <div class="media">
-                                        <div class="media-left">
-                                            <img src="{% static 'img/blog/recent-post/recent-1.png'%}" alt="">
-                                        </div>
-                                        <div class="media-body">
-                                            <a href="#"><p>The road to success is always under con-struction</p></a>
-                                        </div>
-                                    </div>
-                                    <div class="media">
-                                        <div class="media-left">
-                                            <img src="{%static 'img/blog/recent-post/recent-2.png'%}" alt="">
-                                        </div>
-                                        <div class="media-body">
-                                            <a href="#"><p>The road to success is always under con-struction</p></a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </aside>
-                        </div>
+<!--                        <div class="col-md-3 col-sm-6">-->
+<!--                            <aside class="f_widget recent_widget">-->
+<!--                                <div class="f_w_title">-->
+<!--                                    <h3>Recent Posts</h3>-->
+<!--                                </div>-->
+<!--                                <div class="recent_w_inner">-->
+<!--                                    <div class="media">-->
+<!--                                        <div class="media-left">-->
+<!--                                            <img src="{% static 'img/blog/recent-post/recent-1.png'%}" alt="">-->
+<!--                                        </div>-->
+<!--                                        <div class="media-body">-->
+<!--                                            <a href="#"><p>The road to success is always under con-struction</p></a>-->
+<!--                                        </div>-->
+<!--                                    </div>-->
+<!--                                    <div class="media">-->
+<!--                                        <div class="media-left">-->
+<!--                                            <img src="{% static 'img/blog/recent-post/recent-2.png'%}" alt="">-->
+<!--                                        </div>-->
+<!--                                        <div class="media-body">-->
+<!--                                            <a href="#"><p>The road to success is always under con-struction</p></a>-->
+<!--                                        </div>-->
+<!--                                    </div>-->
+<!--                                </div>-->
+<!--                            </aside>-->
+<!--                        </div>-->
                         <div class="col-md-3 col-sm-6">
                             <aside class="f_widget address_widget">
                                 <div class="f_w_title">
-                                    <h3>Office Address</h3>
+                                    <h3>Адрес офиса</h3>
                                 </div>
                                 <div class="address_w_inner">
                                     <div class="media">
@@ -469,7 +466,7 @@
                                             <i class="fa fa-map-marker"></i>
                                         </div>
                                         <div class="media-body">
-                                            <p>1234 Cafficic, California, USA</p>
+                                            <p>423602, Татарстан, Елабуга, Проспект мира 30, кв. 139</p>
                                         </div>
                                     </div>
                                     <div class="media">
@@ -477,8 +474,8 @@
                                             <i class="fa fa-phone"></i>
                                         </div>
                                         <div class="media-body">
-                                            <p>(012) 3456789 </p>
-                                            <p>(012) 3456789 </p>
+                                            <p>+7 987 273 73 83 </p>
+                                            <p>+7 927 486 49 55 </p>
                                         </div>
                                     </div>
                                     <div class="media">
@@ -486,30 +483,42 @@
                                             <i class="fa fa-envelope"></i>
                                         </div>
                                         <div class="media-body">
-                                            <p>info@domain.com</p>
+                                            <p>info@tehstroy.com.ru</p>
                                         </div>
                                     </div>
                                 </div>
                             </aside>
                         </div>
-                        <div class="col-md-3 col-sm-6">
-                            <aside class="f_widget give_us_widget">
-                                <h5>Give Us A Call</h5>
-                                <h4>(012) 3456789</h4>
-                                <h5>or</h5>
-                                <a class="get_bg_btn" href="#">GET A QUOTE</a>
-                            </aside>
-                        </div>
+<!--                        <div class="col-md-3 col-sm-6">-->
+<!--                            <aside class="f_widget give_us_widget">-->
+<!--                                <h5>Give Us A Call</h5>-->
+<!--                                <h4>(012) 3456789</h4>-->
+<!--                                <h5>or</h5>-->
+<!--                                <a class="get_bg_btn" href="#">GET A QUOTE</a>-->
+<!--                            </aside>-->
+<!--                        </div>-->
                     </div>
                 </div>
             </div>
-            <div class="footer_copy_right">
-                <div class="container">
-                    <h4><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></h4>
-                </div>
-            </div>
+<!--            <div class="footer_copy_right">-->
+<!--                <div class="container">-->
+<!--                    <div class="copy_right_inner">-->
+<!--                    	<div class="pull-left">-->
+<!--                    		<h4>&lt;!&ndash; Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. &ndash;&gt;-->
+<!--&lt;!&ndash;Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>&ndash;&gt;-->
+<!--&lt;!&ndash; Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. &ndash;&gt;</h4>-->
+<!--                    	</div>-->
+<!--                    	<div class="pull-right">-->
+<!--                    		<ul class="footer_menu">-->
+<!--                    			<li class="active"><a href="">Home</a></li>-->
+<!--                    			<li><a href="">Terms of Use</a></li>-->
+<!--                    			<li><a href="">Disclaimer</a></li>-->
+<!--                    			<li><a href="">Contact Us</a></li>-->
+<!--                    		</ul>-->
+<!--                    	</div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
         </footer>
         <!--================End Footer Area =================-->
 
