--- a/main_path/templates/main_path/projects.html
+++ b/main_path/templates/main_path/projects.html
@@ -59,7 +59,7 @@
                 </div>
             </div>
             <div class="main_menu_area">
-                <div class="line_bottom">
+
                 <div class="container">
                     <nav class="navbar navbar-default">
                         <!-- Brand and toggle get grouped for better mobile display -->
@@ -85,7 +85,7 @@
                                 <li><a href="{% url 'services'%}">Услуги</a></li>
                                 <li><a href="">О нас</a></li>
 <!--                                <li><a href="blog-details.html">blog</a></li>-->
-                                <li><a href="#">Контакты</a></li>
+                                <li><a href="{% url 'contacts'%}">Контакты</a></li>
 <!--                                <li class="icon_search"><a href="#"><i class="mdi mdi-cart"></i></a></li>-->
                             </ul>
                         </div><!-- /.navbar-collapse -->
