--- a/main_path/templates/main_path/index.html
+++ b/main_path/templates/main_path/index.html
@@ -47,14 +47,6 @@
                         <a><i class="fa fa-map-marker"></i>423602, Татарстан, Елабуга, Проспект мира 30, кв. 139</a>
                         <a><i class="mdi mdi-clock"></i>8:00 - 19:00</a>
                     </div>
-<!--                    <div class="pull-right">-->
-<!--                        <ul class="header_social">-->
-<!--                            <li><a href="#"><i class="fa fa-facebook"></i></a></li>-->
-<!--                            <li><a href="#"><i class="fa fa-twitter"></i></a></li>-->
-<!--                            <li><a href="#"><i class="fa fa-google-plus"></i></a></li>-->
-<!--                            <li><a href="#"><i class="fa fa-pinterest"></i></a></li>-->
-<!--                        </ul>-->
-<!--                    </div>-->
                 </div>
             </div>
             <div class="main_menu_area">
@@ -83,7 +75,7 @@
                                 <li><a href="{% url 'services'%}">Услуги</a></li>
                                 <li><a href="">О нас</a></li>
 <!--                                <li><a href="blog-details.html">blog</a></li>-->
-                                <li><a href="#">Контакты</a></li>
+                                <li><a href="{% url 'contacts'%}">Контакты</a></li>
 <!--                                <li class="icon_search"><a href="#"><i class="mdi mdi-cart"></i></a></li>-->
                             </ul>
                         </div><!-- /.navbar-collapse -->
@@ -94,7 +86,7 @@
         <!--================Header Area =================-->
 
         <!--================Main Slider Area =================-->
-        <section class="main_slider_area slider_2">
+        <section class="main_slider_area slider_2main_slider_area slider_2">
             <div id="main_slider" class="rev_slider" data-version="5.3.1.6">
                 <ul>
                     <li data-index="rs-2972" data-transition="slidingoverlayhorizontal" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="off"  data-easein="default" data-easeout="default" data-masterspeed="default"  data-thumb="{% static 'img/home-slider/Photo_stroyki'%}"  data-rotate="0"  data-saveperformance="off"  data-title="Web Show" data-param1="" data-param2="" data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
@@ -120,26 +112,6 @@
                             data-paddingright="[0,0,0,0]"
                             data-paddingbottom="[10,10,10,10]"
                             data-paddingleft="[0,0,0,0]">Мы воплотим Ваш проект <br> в реальность</div>
-
-<!--                            <div class="tp-caption secand_text"-->
-<!--                            data-x="['left','left','left','left','left']"-->
-<!--                            data-y="['middle','middle','middle','middle']"-->
-<!--                            data-hoffset="['0','15','15','15','15']"-->
-<!--                            data-voffset="['50','50','50','40','0']"-->
-<!--                            data-fontsize="['28','28','28','20','20']"-->
-<!--                            data-lineheight="['38','38','38','30','30']"-->
-<!--                            data-width="['760','760','760','550','400']"-->
-<!--                            data-height="none"-->
-<!--                            data-whitespace="normal"-->
-<!--                            data-type="text"-->
-<!--                            data-responsive_offset="on"-->
-<!--                            data-frames='[{"from":"y:[-100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;","mask":"x:0px;y:0px;s:inherit;e:inherit;","speed":2000,"to":"o:1;","delay":1750,"ease":"Power2.easeInOut"},{"delay":"wait","speed":300,"to":"opacity:0;","ease":"nothing"}]'-->
-<!--                            data-textAlign="['left','left','left','left']"-->
-<!--                            data-paddingtop="[0,0,0,0]"-->
-<!--                            data-paddingright="[0,0,0,0]"-->
-<!--                            data-paddingbottom="[0,0,0,0]"-->
-<!--                            data-paddingleft="[0,0,0,0]">We made just most advance & user friendly constraction theme in the world</div>-->
-
                             <div class="tp-caption"
                             data-x="['left','left','left','left','left']"
                             data-y="['middle','middle','middle','middle']"
@@ -161,6 +133,7 @@
                         </div>
                     </li>
                     <li data-index="rs-2973" data-transition="slidingoverlayhorizontal" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="off"  data-easein="default" data-easeout="default" data-masterspeed="default"  data-thumb="img/home-slider/slider-1.jpg"  data-rotate="0"  data-saveperformance="off"  data-title="Web Show" data-param1="" data-param2="" data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
+
                         <!-- MAIN IMAGE -->
                         <img src="{% static 'img/home-slider/Photo_stroyki.jpg'%}"  alt=""  data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="5" class="rev-slidebg" data-no-retina>
                         <!-- LAYERS -->
@@ -209,16 +182,7 @@
         </section>
         <!--================End Main Slider Area =================-->
         <!--================Get Quote Area =================-->
-<!--        <section class="get_quote_area">-->
-<!--            <div class="container">-->
-<!--                <div class="pull-left">-->
-<!--                    <h4>Looking for a quality and affordable constructor for your next project?</h4>-->
-<!--                </div>-->
-<!--                <div class="pull-right">-->
-<!--                    <a class="get_btn" href="#">GET A QUOTE</a>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </section>-->
+
         <!--================End Get Quote Area =================-->
 
         <!--================Feature Content Area =================-->
@@ -445,7 +409,7 @@
                                     <div class="project_hover_content">
                                         <a><h4>Август-Алабуга</h4></a>
                                         <p>Сроки работы: 01.05.2017-31.08.2018 <br>Объём бетона: 4500 м<sup>3</sup></p>
-                                        <a class="view_btn" href="#">View Project</a>
+<!--                                        <a class="view_btn" href="#">View Project</a>-->
                                     </div>
                                 </div>
                             </div>
@@ -860,6 +824,25 @@
                                 </div>
                             </aside>
                         </div>
+                        <div class="col-md-3 py-md-5 py-4 aside-stretch-right pl-lg-5">
+						<h2 class="footer-heading">Задайте вопрос</h2>
+						<form action="#" class="contact-form">
+              <div class="form-group">
+                <input type="text" class="form-control" placeholder="Your Name">
+              </div>
+              <div class="form-group">
+                <input type="text" class="form-control" placeholder="Your Email">
+              </div>
+              <div class="form-group">
+                <input type="text" class="form-control" placeholder="Subject">
+              </div>
+              <div class="form-group">
+                <textarea name="" id="" cols="30" rows="3" class="form-control" placeholder="Message"></textarea>
+              </div>
+              <div class="form-group">
+              	<button type="submit" class="form-control submit px-3">Send</button>
+              </div>
+            </form>
 <!--                        <div class="col-md-3 col-sm-6">-->
 <!--                            <aside class="f_widget give_us_widget">-->
 <!--                                <h5>Give Us A Call</h5>-->
