--- a/main_path/templates/main_path/services.html
+++ b/main_path/templates/main_path/services.html
@@ -86,7 +86,7 @@
                                     <a href="{% url 'services'%}">Услуги</a></li>
                                 <li><a href="">О нас</a></li>
 <!--                                <li><a href="blog-details.html">blog</a></li>-->
-                                <li><a href="#">Контакты</a></li>
+                                <li><a href="{% url 'contacts'%}">Контакты</a></li>
 <!--                                <li class="icon_search"><a href="#"><i class="mdi mdi-cart"></i></a></li>-->
                             </ul>
                         </div><!-- /.navbar-collapse -->
@@ -300,46 +300,64 @@
                         </div>
                         <div class="col-md-6">
                             <div class="our_skill_inner">
+                                <p class="project_title">Качество наших услуг</p>
                                 <h4 class="project_title"></h4>
                                 <div class="single_skill">
-                                    <h3>Repairing</h3>
+                                    <h3 class="margin_bottom">Профессионализм и опыт сотрудников</h3>
                                     <div class="progress">
-                                        <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
-                                            <div class="progress_parcent"><span class="counter">90</span>%</div>
+                                        <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                                            <div class="progress_parcent"><span class="counter">100</span>%</div>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="single_skill">
-                                    <h3>Painting</h3>
+                                    <h3 class="margin_bottom">Качество строительных материалов</h3>
                                     <div class="progress">
-                                        <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
-                                            <div class="progress_parcent"><span class="counter">80</span>%</div>
+                                        <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                                            <div class="progress_parcent"><span class="counter">100</span>%</div>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="single_skill">
-                                    <h3>Gardening</h3>
+                                    <h3 class="margin_bottom">Соблюдение сроков выполнения работ</h3>
                                     <div class="progress">
-                                        <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
-                                            <div class="progress_parcent"><span class="counter">70</span>%</div>
+                                        <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                                            <div class="progress_parcent"><span class="counter">100</span>%</div>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="single_skill">
-                                    <h3>Repairing</h3>
+                                    <h3 class="margin_bottom"> Обстановка и безопасность на объекте</h3>
                                     <div class="progress">
-                                        <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
-                                            <div class="progress_parcent"><span class="counter">80</span>%</div>
+                                        <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                                            <div class="progress_parcent"><span class="counter">100</span>%</div>
                                         </div>
                                     </div>
                                 </div>
+                                <div class="single_skill">
+                                    <h3 class="margin_bottom">Коммуникация и взаимодействие с заказчиком</h3>
+                                    <div class="progress">
+                                        <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                                            <div class="progress_parcent"><span class="counter">100</span>%</div>
+                                        </div>
+                                    </div>
+                                </div>
+                                 <div class="single_skill">
+                                    <h3 class="margin_bottom">Использование инновационных технологий и методов строительства</h3>
+                                    <div class="progress">
+                                        <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                                            <div class="progress_parcent"><span class="counter">100</span>%</div>
+                                        </div>
+                                    </div>
+                                </div>
+
                             </div>
-                            <div class="service_brochure">
-                                <h4 class="project_title">Service Description</h4>
-                                <p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed semper, lacus sed feugiat dictum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore.</p>
-                                <a href="#"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>Скачать PDF</a>
-                                <a href="#"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>Скачать DOC</a>
-                            </div>
+<!--                            <div class="service_brochure">-->
+<!--                                <h4 class="project_title">Service Description</h4>-->
+<!--                                <p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed semper, lacus sed feugiat dictum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore.</p>-->
+<!--                                <a href="#"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>Скачать PDF</a>-->
+<!--                                <a href="#"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>Скачать DOC</a>-->
+<!--                            </div>-->
                         </div>
                     </div>
                 </div>
@@ -354,13 +372,13 @@
                 <div class="our_latest_slider owl-carousel">
                     <div class="item">
                         <div class="project_item">
-                            <img src="{%static 'img/project/project-2/project-1.jpg'%}" alt="">
+                            <img src="{%static 'img/project/project-2/кастамону_350_350.jpg'%}" alt="">
                             <div class="project_hover">
                                 <div class="project_hover_inner">
                                     <div class="project_hover_content">
-                                        <a href="#"><h4>Jahanara Vila</h4></a>
-                                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium </p>
-                                        <a class="view_btn" href="#">View Project</a>
+                                        <a><h4>KASTAMONU ENTEGRE RUSSIA</h4></a>
+                                        <p>Объект : 125.000 м<sup>2</sup></p>
+<!--                                        <a class="view_btn" href="#">View Project</a>-->
                                     </div>
                                 </div>
                             </div>
@@ -368,13 +386,13 @@
                     </div>
                     <div class="item">
                         <div class="project_item">
-                            <img src="{% static 'img/project/project-2/project-2.jpg'%}" alt="">
+                            <img src="{% static 'img/project/project-2/инкотэк_350_350.jpg'%}" alt="">
                             <div class="project_hover">
                                 <div class="project_hover_inner">
                                     <div class="project_hover_content">
                                         <a href="#"><h4>Jahanara Vila</h4></a>
                                         <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium </p>
-                                        <a class="view_btn" href="#">View Project</a>
+<!--                                        <a class="view_btn" href="#">View Project</a>-->
                                     </div>
                                 </div>
                             </div>
@@ -382,13 +400,13 @@
                     </div>
                     <div class="item">
                         <div class="project_item">
-                            <img src="{% static 'img/project/project-2/project-3.jpg'%}" alt="">
+                            <img src="{% static 'img/project/project-2/август_350_350.jpg'%}" alt="">
                             <div class="project_hover">
                                 <div class="project_hover_inner">
                                     <div class="project_hover_content">
                                         <a href="#"><h4>Jahanara Vila</h4></a>
                                         <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium </p>
-                                        <a class="view_btn" href="#">View Project</a>
+<!--                                        <a class="view_btn" href="#">View Project</a>-->
                                     </div>
                                 </div>
                             </div>
@@ -399,18 +417,18 @@
         </section>
         <!--================End Our Latest Project Area =================-->
 
-        <!--================Get Quote Area =================-->
-        <section class="get_quote_area project_contact">
-            <div class="container">
-                <div class="pull-left">
-                    <h3>Save Your Money </h3>
-                    <h4>Call us today or Contact us to get started your project.. </h4>
-                </div>
-                <div class="pull-right">
-                    <a class="get_btn_black" href="#">Contact Us</a>
-                </div>
-            </div>
-        </section>
+<!--        &lt;!&ndash;================Get Quote Area =================&ndash;&gt;-->
+<!--        <section class="get_quote_area project_contact">-->
+<!--            <div class="container">-->
+<!--                <div class="pull-left">-->
+<!--                    <h3>Save Your Money </h3>-->
+<!--                    <h4>Call us today or Contact us to get started your project.. </h4>-->
+<!--                </div>-->
+<!--                <div class="pull-right">-->
+<!--                    <a class="get_btn_black" href="#">Contact Us</a>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </section>-->
         <!--================End Get Quote Area =================-->
 
         <!--================Footer Area =================-->
